--- a/Star-Rating/index.html
+++ b/Star-Rating/index.html
@@ -4,54 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .box{
-            display: inline-flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        #rating{
-            align-self: center;
-            font-size: 20px;
-        }
-        .card{
-            position: relative;
-            margin: 0;
-            padding: 5px;
-            background: #000;
-            display: inline-flex;
-            gap: 5px;
-        }
-        .star{
-            position: relative;
-            width: 50px;
-            height: 50px;
-            background: #fff;
-            cursor: pointer;
-            
-        }
-        .one{
-            background-color: rgb(255, 0, 0);
-        }
-        .two{
-            background-color: rgb(255, 106, 0);
-        }
-        .three{
-            background-color: rgb(251, 255, 120);
-        }
-        .four{
-            background-color: rgb(255, 255, 0);
-        }
-        .five{
-            background-color: rgb(133, 249, 0);
-        }
-        .six{
-            background-color: rgb(30, 249, 20);
-        }
-        .seven{
-            background-color: rgb(10, 110, 10);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="box">
